[package]
name = "litesvm_exp"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "litesvm_exp"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]


[dependencies]
anchor-lang = "0.31.1"

[dev-dependencies]
litesvm = "0.6.1"
litesvm-token = "0.6.1"
anchor-litesvm = "0.2.0"
litesvm-utils = "0.2.0"
solana-sdk = "2.2"
spl-associated-token-account = "6.0"
sha2 = "0.10"
hex = "0.4"